--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Port-Folio-Website</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
     <body>
         <header id="welcome">
@@ -10,6 +11,10 @@
                 <h1>Welcome</h1>
             </div>
         </header>
+	 <div class="navi">   
+            <a href="labu007.github.io/labu.github.io/repopeople.html" class="w3-bar-item w3-button w3-hover-green">Link 1</a>
+          </div>
+	    
         <section id="bio-box">
 	        <img src="port2.jpg" alt="Photo">
             <p>My name is <strong>Dibakar Barua</strong>.I am a student of American International University Bangladesh on Computer Science And Software Engineering (CSSE) program.
