--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             </div>
         </header>
 	 <div class="navi">   
-            <a href="labu007.github.io/labu.github.io/repopeople.html" class="w3-bar-item w3-button w3-hover-green">Link 1</a>
+            <a href="repopeople.html" class="w3-bar-item w3-button w3-hover-green">Link 1</a>
           </div>
 	    
         <section id="bio-box">
